feat/minor: add archived files to api /{entity_type}/{id}/uploads endpoint via archived query parameter
Archived files are not included by default to retain the established behavior
